--- a/!!!_SVG_ANIMATED/ICONS_WIP/arrow_big_right.css
+++ b/!!!_SVG_ANIMATED/ICONS_WIP/arrow_big_right.css
@@ -4,6 +4,6 @@
 
 @keyframes arrowAnimate {
     0% { transform: translateX(0); }
-    50% { transform: translateX(3px); }
+    50% { transform: translateX(2px); }
     100% { transform: translateX(0); }
 }
